change color mode for light + dark mode fix error

--- a/src/components/NavBarComponent/NavBarComponent.css
+++ b/src/components/NavBarComponent/NavBarComponent.css
@@ -80,6 +80,10 @@ nav.scrolled {
     display: none;
 }
 
+.theme-toggle{
+    display: none;
+}
+
 .mode-icon{
   width: 30px;
   height: 27px;
